--- a/lib/index.html
+++ b/lib/index.html
@@ -96,6 +96,11 @@
       min-width: 130px;
     }
 
+    .list-unstyled {
+      list-style: none;
+      padding-left: 0;
+    }
+
     .modules-list {
       list-style: none;
       padding-left: 0;
@@ -203,7 +208,7 @@ export default function() {
 
     <section class="page-section">
       <h2>Resources</h2>
-      <ul class="modules-list">
+      <ul class="list-unstyled">
         <li>
           <p>
             <a href="https://docs.k6.io/docs">K6 API docs</a>
