--- a/lib/index.html
+++ b/lib/index.html
@@ -18,7 +18,7 @@ pre.language-js {
 }
 
 body {
-  padding: 0;
+  margin: 0;
   font-family: -apple-system,Whitney,BlinkMacSystemFont,segoe ui,Roboto,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
   color: #444;
 }
@@ -53,10 +53,11 @@ a:not(:hover) {
 }
 
 .page {
-  margin: 50px auto;
+  margin: 0 auto 50px;
   max-width: 960px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 50px;
 }
 
 .page-section {
@@ -78,8 +79,8 @@ a:not(:hover) {
 }
 
 .header {
-  padding: 20px 0;
-  margin-bottom: 20px;
+  position: relative;
+  margin-bottom: 40px;
 }
 
 .logo svg {
@@ -105,6 +106,10 @@ a:not(:hover) {
 @media (max-width: 599px) {
   .logo {
     margin-bottom: 10px;
+  }
+
+  .logo svg {
+    width: 100px;
   }
 }
 
@@ -144,7 +149,9 @@ a:not(:hover) {
 
 
 .header-icons {
-  flex: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
   display: flex;
   justify-content: flex-end;
   align-self: flex-start;
