Forgot to generate new indexpage.

--- a/lib/index.html
+++ b/lib/index.html
@@ -229,7 +229,7 @@ a:not(:hover) {
           <pre><code class="code language-js">// Default import
 import jsonpath from "jslib.k6.io/jsonpath/1.0.2/index.js";
 
-// Single export import
+// Non default import
 import { nonDefaultExport } from "jslib.k6.io/some-js-pkg/1.0.0/index.js";</code></pre>
           <p>Full script showcase</p>
           <pre><code class="code language-js">import { check } from "k6";
