[feat] Add papaparse 5.1.1

--- a/lib/index.html
+++ b/lib/index.html
@@ -464,6 +464,9 @@ export default function() {
     </tr><tr>
       <td>form-urlencoded</td>
       <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a></td>
+    </tr><tr>
+      <td>papaparse</td>
+      <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
     </tr>
     </table>
   
