--- a/static/jumbo.html
+++ b/static/jumbo.html
@@ -76,21 +76,16 @@
           </div>
           <div class="content">
             <pre><code class="code language-js">import { check } from "k6";
-import jsonpath from "https://jslib.k6.io/jsonpath/1.0.2/index.js"
+import { randomIntBetween, randomItem } from "https://jslib.k6.io/k6-utils/1.0.0/index.js";
 
 export const options = {
   "duration": "10s",
   "vus": 1
 };
 
-const testData = {
-  user: { name: "Batman" }
-};
-
 export default function() {
-  check(testData, {
-    "JSON path works": () => jsonpath.value(testData, 'user.name') === "Batman"
-  });
+  console.log(randomItem([1,2,3,4]));
+  sleep(randomIntBetween(1,5)); // sleep between 1 and 5 seconds
 }</code></pre>
           </div>
         </div>
