--- a/lib/index.html
+++ b/lib/index.html
@@ -465,6 +465,9 @@ export default function() {
     </tr><tr>
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
+    </tr><tr>
+      <td>ajv</td>
+      <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
     </tr>
     </table>
   
