--- a/lib/index.html
+++ b/lib/index.html
@@ -465,6 +465,9 @@ export default function() {
     </tr><tr>
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
+    </tr><tr>
+      <td>httpx</td>
+      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a></td>
     </tr>
     </table>
   
