--- a/lib/index.html
+++ b/lib/index.html
@@ -468,6 +468,9 @@ export default function() {
     </tr><tr>
       <td>httpx</td>
       <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a></td>
+    </tr><tr>
+      <td>functional</td>
+      <td><a target="_blank" href="https://jslib.k6.io/functional/0.0.1/index.js">0.0.1</a></td>
     </tr>
     </table>
   
