--- a/lib/index.html
+++ b/lib/index.html
@@ -466,11 +466,14 @@ export default function() {
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
     </tr><tr>
+      <td>ajv</td>
+      <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
+    </tr><tr>
       <td>httpx</td>
       <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a></td>
     </tr><tr>
-      <td>ajv</td>
-      <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
+      <td>functional</td>
+      <td><a target="_blank" href="https://jslib.k6.io/functional/0.0.1/index.js">0.0.1</a></td>
     </tr>
     </table>
   
