--- a/lib/index.html
+++ b/lib/index.html
@@ -470,7 +470,7 @@ export default function() {
       <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
     </tr><tr>
       <td>httpx</td>
-      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a></td>
     </tr><tr>
       <td>functional</td>
       <td><a target="_blank" href="https://jslib.k6.io/functional/0.0.1/index.js">0.0.1</a></td>
