[feat] add URL and URLSearchParams web api modules.

--- a/lib/index.html
+++ b/lib/index.html
@@ -474,6 +474,9 @@ export default function() {
     </tr><tr>
       <td>functional</td>
       <td><a target="_blank" href="https://jslib.k6.io/functional/0.0.1/index.js">0.0.1</a></td>
+    </tr><tr>
+      <td>url</td>
+      <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
     </tr>
     </table>
   
