--- a/static/header.html
+++ b/static/header.html
@@ -27,13 +27,32 @@
   header .bg-k6 {
     background-color: #f9f8fc;
   }
+
+  header .no-hover {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  header .no-hover span {
+    margin-left: 10px;
+    font-size: 12px;
+    color: #7d64ff;
+    border-radius: 2px;
+    background-color: rgba(125,100,255,.1);
+    line-height: 1;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 2px 5px;
+  }
+
 </style>
 <header class="wrapper">
 
   <div class="container">
     <div class="row">
       <div class="col-xl-3 col-lg-2 col-3" style="padding: 12.5px">
-        <a>
+        <a class="no-hover" href="https://jslib.k6.io/">
           <svg width="50" height="45" fill="none">
             <path
               d="M31.968 34.681a2.007 2.007 0 002.011-2.003c0-1.106-.9-2.003-2.011-2.003a2.007 2.007 0 00-2.012 2.003c0 1.106.9 2.003 2.012 2.003z"
@@ -42,6 +61,7 @@
               d="M39.575 0L27.154 16.883 16.729 9.31 0 45h50L39.575 0zM23.663 37.17l-2.97-4.072v4.072h-2.751V22.038l2.75 1.989v7.66l3.659-5.014 2.086 1.51-3.071 4.21 3.486 4.776h-3.189v.001zm8.305.17c-2.586 0-4.681-2.088-4.681-4.662 0-1.025.332-1.972.896-2.743l4.695-6.435 2.086 1.51-2.239 3.07a4.667 4.667 0 013.924 4.6c0 2.572-2.095 4.66-4.681 4.66z"
               fill="#7D64FF"></path>
           </svg>
+          <span>jslib</span>
         </a>
       </div>
       <div class="col-xs mr-auto"></div>
