[fix] Add copy button for snippets

--- a/static/jumbo.html
+++ b/static/jumbo.html
@@ -57,6 +57,10 @@
   .jumbo code.code {
     font-size: .8em;
   }
+
+  .jumbo .code-toolbar .toolbar-item {
+    display: none;
+  }
 </style>
 <div class="wrapper">
   <div class="container jumbo">
