add bip39 library

--- a/lib/index.html
+++ b/lib/index.html
@@ -596,6 +596,9 @@ export default function() {
     </tr><tr>
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
+    </tr><tr>
+      <td>bip39</td>
+      <td><a target="_blank" href="https://jslib.k6.io/bip39/1.0.0/index.js">1.0.0</a></td>
     </tr>
     </table>
   
