--- a/lib/index.html
+++ b/lib/index.html
@@ -577,16 +577,16 @@ export default function() {
       <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a></td>
     </tr><tr>
       <td>jsonpath</td>
-      <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a>, <a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
     </tr><tr>
       <td>form-urlencoded</td>
-      <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a>, <a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.2/index.js">3.0.2</a></td>
     </tr><tr>
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
     </tr><tr>
       <td>ajv</td>
-      <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a>, <a target="_blank" href="https://jslib.k6.io/ajv/6.12.6/index.js">6.12.6</a></td>
     </tr><tr>
       <td>httpx</td>
       <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a></td>
@@ -598,7 +598,7 @@ export default function() {
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
     </tr><tr>
       <td>bip39</td>
-      <td><a target="_blank" href="https://jslib.k6.io/bip39/1.0.0/index.js">1.0.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/bip39/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/bip39/3.0.3/index.js">3.0.3</a></td>
     </tr>
     </table>
   
