--- a/lib/index.html
+++ b/lib/index.html
@@ -576,6 +576,9 @@ export default function() {
       <td>k6-utils</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a></td>
     </tr><tr>
+      <td>k6-summary</td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a></td>
+    </tr><tr>
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
     </tr><tr>
