Add initial FormData polyfill

--- a/lib/index.html
+++ b/lib/index.html
@@ -582,6 +582,9 @@ export default function() {
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
     </tr><tr>
+      <td>formdata</td>
+      <td><a target="_blank" href="https://jslib.k6.io/formdata/0.0.1/index.js">0.0.1</a></td>
+    </tr><tr>
       <td>form-urlencoded</td>
       <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a></td>
     </tr><tr>
