--- a/lib/index.html
+++ b/lib/index.html
@@ -570,38 +570,49 @@ export default function() {
         <tr>
           <th>Name</th>
           <th>Version(s)</th>
+          <th>Docs</th>
         </tr>
       </thead>
       <tr>
       <td>k6-utils</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a></td>
+      <td></td>
     </tr><tr>
       <td>k6-summary</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a></td>
+      <td></td>
     </tr><tr>
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
+      <td></td>
     </tr><tr>
       <td>formdata</td>
       <td><a target="_blank" href="https://jslib.k6.io/formdata/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/formdata/0.0.2/index.js">0.0.2</a></td>
+      <td></td>
     </tr><tr>
       <td>form-urlencoded</td>
       <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a></td>
+      <td></td>
     </tr><tr>
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
+      <td></td>
     </tr><tr>
       <td>ajv</td>
       <td><a target="_blank" href="https://jslib.k6.io/ajv/6.12.5/index.js">6.12.5</a></td>
+      <td><a href="https://ajv.js.org/api.html">https://ajv.js.org/api.html</a></td>
     </tr><tr>
       <td>httpx</td>
       <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a></td>
+      <td></td>
     </tr><tr>
-      <td>functional</td>
-      <td><a target="_blank" href="https://jslib.k6.io/functional/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/functional/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/functional/0.0.3/index.js">0.0.3</a></td>
+      <td>expect</td>
+      <td><a target="_blank" href="https://jslib.k6.io/expect/0.0.4/index.js">0.0.4</a></td>
+      <td></td>
     </tr><tr>
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
+      <td></td>
     </tr>
     </table>
   
