--- a/lib/index.html
+++ b/lib/index.html
@@ -576,7 +576,7 @@ export default function() {
       <tr>
       <td>k6-utils</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a></td>
-      <td></td>
+      <td><a href="https://k6.io/docs/javascript-api/jslib/utils">https://k6.io/docs/javascript-api/jslib/utils</a></td>
     </tr><tr>
       <td>k6-summary</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a></td>
