--- a/lib/index.html
+++ b/lib/index.html
@@ -603,7 +603,7 @@ export default function() {
       <td><a href="https://ajv.js.org/api.html">https://ajv.js.org/api.html</a></td>
     </tr><tr>
       <td>httpx</td>
-      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.4/index.js">0.0.4</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/httpx">https://k6.io/docs/javascript-api/jslib/httpx</a></td>
     </tr><tr>
       <td>expect</td>
