--- a/lib/index.html
+++ b/lib/index.html
@@ -607,7 +607,7 @@ export default function() {
       <td><a href="https://k6.io/docs/javascript-api/jslib/httpx">https://k6.io/docs/javascript-api/jslib/httpx</a></td>
     </tr><tr>
       <td>expect</td>
-      <td><a target="_blank" href="https://jslib.k6.io/expect/0.0.4/index.js">0.0.4</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/expect/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/expect/0.0.5/index.js">0.0.5</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/expect">https://k6.io/docs/javascript-api/jslib/expect</a></td>
     </tr><tr>
       <td>url</td>
