feat: added kahwah library

--- a/lib/index.html
+++ b/lib/index.html
@@ -613,6 +613,10 @@ export default function() {
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
       <td></td>
+    </tr><tr>
+      <td>kahwah</td>
+      <td><a target="_blank" href="https://jslib.k6.io/kahwah/0.1.6/index.js">0.1.6</a></td>
+      <td><a href="https://www.npmjs.com/package/kahwah">https://www.npmjs.com/package/kahwah</a></td>
     </tr>
     </table>
   
