--- a/lib/index.html
+++ b/lib/index.html
@@ -463,6 +463,7 @@ code {
     </div>
   </div>
 </header>
+
       
 <style>
   .container.jumbo {
@@ -584,7 +585,7 @@ export default function() {
     </tr><tr>
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
-      <td><a href="https://github.com/grafana/k6-jslib-JSONPath">https://github.com/k6io/JSONPath</a></td>
+      <td><a href="https://github.com/k6io/JSONPath">https://github.com/k6io/JSONPath</a></td>
     </tr><tr>
       <td>formdata</td>
       <td><a target="_blank" href="https://jslib.k6.io/formdata/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/formdata/0.0.2/index.js">0.0.2</a></td>
@@ -603,7 +604,7 @@ export default function() {
       <td><a href="https://ajv.js.org/api.html">https://ajv.js.org/api.html</a></td>
     </tr><tr>
       <td>httpx</td>
-      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.5/index.js">0.0.5</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.5/index.js">0.0.5</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.6/index.js">0.0.6</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/httpx">https://k6.io/docs/javascript-api/jslib/httpx</a></td>
     </tr><tr>
       <td>expect</td>
