Added k6chaijs library

--- a/lib/index.html
+++ b/lib/index.html
@@ -585,7 +585,7 @@ export default function() {
     </tr><tr>
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
-      <td><a href="https://github.com/k6io/JSONPath">https://github.com/k6io/JSONPath</a></td>
+      <td><a href="https://github.com/grafana/k6-jslib-JSONPath">https://github.com/grafana/k6-jslib-JSONPath</a></td>
     </tr><tr>
       <td>formdata</td>
       <td><a target="_blank" href="https://jslib.k6.io/formdata/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/formdata/0.0.2/index.js">0.0.2</a></td>
@@ -610,6 +610,10 @@ export default function() {
       <td>expect</td>
       <td><a target="_blank" href="https://jslib.k6.io/expect/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/expect/0.0.5/index.js">0.0.5</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/expect">https://k6.io/docs/javascript-api/jslib/expect</a></td>
+    </tr><tr>
+      <td>k6chaijs</td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.0/index.js">4.3.4.0</a></td>
+      <td><a href="https://github.com/grafana/k6-jslib-k6chaijs">https://github.com/grafana/k6-jslib-k6chaijs</a></td>
     </tr><tr>
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
