--- a/lib/index.html
+++ b/lib/index.html
@@ -615,6 +615,10 @@ export default function() {
       <td><a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.0/index.js">4.3.4.0</a></td>
       <td><a href="https://github.com/grafana/k6-jslib-k6chaijs">https://github.com/grafana/k6-jslib-k6chaijs</a></td>
     </tr><tr>
+      <td>k6chaijs-contracts</td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6chaijs-contracts/4.3.4.0/index.js">4.3.4.0</a></td>
+      <td><a href="https://github.com/grafana/k6-jslib-k6chaijs-contracts">https://github.com/grafana/k6-jslib-k6chaijs-contracts</a></td>
+    </tr><tr>
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
       <td></td>
