--- a/lib/index.html
+++ b/lib/index.html
@@ -576,7 +576,7 @@ export default function() {
       </thead>
       <tr>
       <td>k6-utils</td>
-      <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.1.0/index.js">1.1.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.1.0/index.js">1.1.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.2.0/index.js">1.2.0</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/utils">https://k6.io/docs/javascript-api/jslib/utils</a></td>
     </tr><tr>
       <td>k6-summary</td>
