Add k6-jslib-aws v0.1.0

--- a/lib/index.html
+++ b/lib/index.html
@@ -626,6 +626,10 @@ export default function() {
       <td>kahwah</td>
       <td><a target="_blank" href="https://jslib.k6.io/kahwah/0.1.6/index.js">0.1.6</a></td>
       <td><a href="https://www.npmjs.com/package/kahwah">https://www.npmjs.com/package/kahwah</a></td>
+    </tr><tr>
+      <td>aws</td>
+      <td><a target="_blank" href="https://jslib.k6.io/aws/0.1.0/index.js">0.1.0</a></td>
+      <td><a href="https://github.com/grafana/k6-jslib-aws">https://github.com/grafana/k6-jslib-aws</a></td>
     </tr>
     </table>
   
