--- a/lib/index.html
+++ b/lib/index.html
@@ -630,6 +630,10 @@ export default function() {
       <td>aws</td>
       <td><a target="_blank" href="https://jslib.k6.io/aws/0.1.0/aws.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.3.0/aws.js">0.3.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.4.0/aws.js">0.4.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.5.0/aws.js">0.5.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.6.0/aws.js">0.6.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.0/aws.js">0.7.0</a></td>
       <td><a href="https://github.com/grafana/k6-jslib-aws">https://github.com/grafana/k6-jslib-aws</a></td>
+    </tr><tr>
+      <td>k6-rails</td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6-rails/0.1.0/index.js">0.1.0</a></td>
+      <td></td>
     </tr>
     </table>
   
@@ -1299,4 +1303,3 @@ Prism.languages.clike = {
       </script>
     </body>
     </html>
-  
