Update Docs references on the homepage

--- a/lib/index.html
+++ b/lib/index.html
@@ -581,7 +581,7 @@ export default function() {
     </tr><tr>
       <td>k6-summary</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.3/index.js">0.0.3</a></td>
-      <td></td>
+      <td><a href="https://github.com/grafana/k6-jslib-summary">https://github.com/grafana/k6-jslib-summary</a></td>
     </tr><tr>
       <td>jsonpath</td>
       <td><a target="_blank" href="https://jslib.k6.io/jsonpath/1.0.2/index.js">1.0.2</a></td>
@@ -589,11 +589,11 @@ export default function() {
     </tr><tr>
       <td>formdata</td>
       <td><a target="_blank" href="https://jslib.k6.io/formdata/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/formdata/0.0.2/index.js">0.0.2</a></td>
-      <td></td>
+      <td><a href="https://github.com/grafana/k6-jslib-formdata">https://github.com/grafana/k6-jslib-formdata</a></td>
     </tr><tr>
       <td>form-urlencoded</td>
       <td><a target="_blank" href="https://jslib.k6.io/form-urlencoded/3.0.0/index.js">3.0.0</a></td>
-      <td></td>
+      <td><a href="https://github.com/grafana/k6-jslib-form-urlencoded">https://github.com/grafana/k6-jslib-form-urlencoded</a></td>
     </tr><tr>
       <td>papaparse</td>
       <td><a target="_blank" href="https://jslib.k6.io/papaparse/5.1.1/index.js">5.1.1</a></td>
@@ -621,7 +621,7 @@ export default function() {
     </tr><tr>
       <td>url</td>
       <td><a target="_blank" href="https://jslib.k6.io/url/1.0.0/index.js">1.0.0</a></td>
-      <td></td>
+      <td><a href="https://github.com/grafana/k6-jslib-url">https://github.com/grafana/k6-jslib-url</a></td>
     </tr><tr>
       <td>kahwah</td>
       <td><a target="_blank" href="https://jslib.k6.io/kahwah/0.1.6/index.js">0.1.6</a></td>
@@ -629,7 +629,7 @@ export default function() {
     </tr><tr>
       <td>aws</td>
       <td><a target="_blank" href="https://jslib.k6.io/aws/0.1.0/aws.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.3.0/aws.js">0.3.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.4.0/aws.js">0.4.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.5.0/aws.js">0.5.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.6.0/aws.js">0.6.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.0/aws.js">0.7.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.1/aws.js">0.7.1</a></td>
-      <td><a href="https://github.com/grafana/k6-jslib-aws">https://github.com/grafana/k6-jslib-aws</a></td>
+      <td><a href="https://k6.io/docs/javascript-api/jslib/aws/">https://k6.io/docs/javascript-api/jslib/aws/</a></td>
     </tr>
     </table>
   
