Fix example in index not importing sleep

--- a/lib/index.html
+++ b/lib/index.html
@@ -543,7 +543,7 @@ code {
             <span class="button"></span>
           </div>
           <div class="content">
-            <pre><code class="code language-js">import { check } from "k6";
+            <pre><code class="code language-js">import { sleep, check } from "k6";
 import { randomIntBetween, randomItem } from "https://jslib.k6.io/k6-utils/1.4.0/index.js";
 
 export const options = {
