--- a/lib/index.html
+++ b/lib/index.html
@@ -580,7 +580,7 @@ export default function() {
       <td><a href="https://k6.io/docs/javascript-api/jslib/utils">https://k6.io/docs/javascript-api/jslib/utils</a></td>
     </tr><tr>
       <td>k6-summary</td>
-      <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.4/index.js">0.0.4</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.1.0/index.js">0.1.0</a></td>
       <td><a href="https://github.com/grafana/k6-jslib-summary">https://github.com/grafana/k6-jslib-summary</a></td>
     </tr><tr>
       <td>jsonpath</td>
