--- a/lib/index.html
+++ b/lib/index.html
@@ -577,7 +577,7 @@ export default function() {
       <tr>
       <td>k6-utils</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-utils/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.1.0/index.js">1.1.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.2.0/index.js">1.2.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.3.0/index.js">1.3.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-utils/1.4.0/index.js">1.4.0</a></td>
-      <td><a href="https://k6.io/docs/javascript-api/jslib/utils">https://k6.io/docs/javascript-api/jslib/utils</a></td>
+      <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/utils">https://grafana.com/docs/k6/latest/javascript-api/jslib/utils</a></td>
     </tr><tr>
       <td>k6-summary</td>
       <td><a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/k6-summary/0.1.0/index.js">0.1.0</a></td>
@@ -605,7 +605,7 @@ export default function() {
     </tr><tr>
       <td>httpx</td>
       <td><a target="_blank" href="https://jslib.k6.io/httpx/0.0.1/index.js">0.0.1</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.2/index.js">0.0.2</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.3/index.js">0.0.3</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.5/index.js">0.0.5</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.0.6/index.js">0.0.6</a>, <a target="_blank" href="https://jslib.k6.io/httpx/0.1.0/index.js">0.1.0</a></td>
-      <td><a href="https://k6.io/docs/javascript-api/jslib/httpx">https://k6.io/docs/javascript-api/jslib/httpx</a></td>
+      <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/httpx">https://grafana.com/docs/k6/latest/javascript-api/jslib/httpx</a></td>
     </tr><tr>
       <td>expect</td>
       <td><a target="_blank" href="https://jslib.k6.io/expect/0.0.4/index.js">0.0.4</a>, <a target="_blank" href="https://jslib.k6.io/expect/0.0.5/index.js">0.0.5</a></td>
@@ -629,11 +629,11 @@ export default function() {
     </tr><tr>
       <td>aws</td>
       <td><a target="_blank" href="https://jslib.k6.io/aws/0.1.0/aws.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.3.0/aws.js">0.3.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.4.0/aws.js">0.4.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.5.0/aws.js">0.5.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.6.0/aws.js">0.6.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.0/aws.js">0.7.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.1/aws.js">0.7.1</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.2/aws.js">0.7.2</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.8.0/aws.js">0.8.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.8.1/aws.js">0.8.1</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.9.0/aws.js">0.9.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.10.0/aws.js">0.10.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.11.0/aws.js">0.11.0</a></td>
-      <td><a href="https://k6.io/docs/javascript-api/jslib/aws/">https://k6.io/docs/javascript-api/jslib/aws/</a></td>
+      <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/aws">https://grafana.com/docs/k6/latest/javascript-api/jslib/aws</a></td>
     </tr><tr>
       <td>http-instrumentation-pyroscope</td>
       <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.0/index.js">1.0.0</a></td>
-      <td><a href="https://k6.io/docs/javascript-api/jslib/http-instrumentation-pyroscope/">https://k6.io/docs/javascript-api/jslib/http-instrumentation-pyroscope/</a></td>
+      <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/">https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/</a></td>
     </tr>
     </table>
   
