--- a/lib/index.html
+++ b/lib/index.html
@@ -630,6 +630,10 @@ export default function() {
       <td>aws</td>
       <td><a target="_blank" href="https://jslib.k6.io/aws/0.1.0/aws.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.3.0/aws.js">0.3.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.4.0/aws.js">0.4.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.5.0/aws.js">0.5.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.6.0/aws.js">0.6.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.0/aws.js">0.7.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.1/aws.js">0.7.1</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.7.2/aws.js">0.7.2</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.8.0/aws.js">0.8.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.8.1/aws.js">0.8.1</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.9.0/aws.js">0.9.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.10.0/aws.js">0.10.0</a>, <a target="_blank" href="https://jslib.k6.io/aws/0.11.0/aws.js">0.11.0</a></td>
       <td><a href="https://k6.io/docs/javascript-api/jslib/aws/">https://k6.io/docs/javascript-api/jslib/aws/</a></td>
+    </tr><tr>
+      <td>http-instrumentation-pyroscope</td>
+      <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.0/index.js">1.0.0</a></td>
+      <td><a href="https://k6.io/docs/javascript-api/jslib/http-instrumentation-pyroscope/">https://k6.io/docs/javascript-api/jslib/http-instrumentation-pyroscope/</a></td>
     </tr>
     </table>
   
