Add entry in supported.json and regenerate index.html

--- a/lib/index.html
+++ b/lib/index.html
@@ -612,7 +612,7 @@ export default function() {
       <td><a href="https://k6.io/docs/javascript-api/jslib/expect">https://k6.io/docs/javascript-api/jslib/expect</a></td>
     </tr><tr>
       <td>k6chaijs</td>
-      <td><a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.0/index.js">4.3.4.0</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.1/index.js">4.3.4.1</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.2/index.js">4.3.4.2</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.3/index.js">4.3.4.3</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.5.0.0/index.js">4.5.0.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.0/index.js">4.3.4.0</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.1/index.js">4.3.4.1</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.2/index.js">4.3.4.2</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.3.4.3/index.js">4.3.4.3</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.5.0.0/index.js">4.5.0.0</a>, <a target="_blank" href="https://jslib.k6.io/k6chaijs/4.5.0.1/index.js">4.5.0.1</a></td>
       <td><a href="https://github.com/grafana/k6-jslib-k6chaijs">https://github.com/grafana/k6-jslib-k6chaijs</a></td>
     </tr><tr>
       <td>k6chaijs-contracts</td>
