Do not override already patched methods when applying Pyroscope instrumentation

--- a/lib/index.html
+++ b/lib/index.html
@@ -636,7 +636,7 @@ export default function() {
       <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/aws">https://grafana.com/docs/k6/latest/javascript-api/jslib/aws</a></td>
     </tr><tr>
       <td>http-instrumentation-pyroscope</td>
-      <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.1/index.js">1.0.1</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.1/index.js">1.0.1</a>, <a target="_blank" href="https://jslib.k6.io/http-instrumentation-pyroscope/1.0.2/index.js">1.0.2</a></td>
       <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/">https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/</a></td>
     </tr><tr>
       <td>http-instrumentation-tempo</td>
