--- a/lib/index.html
+++ b/lib/index.html
@@ -640,7 +640,7 @@ export default function() {
       <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/">https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-pyroscope/</a></td>
     </tr><tr>
       <td>http-instrumentation-tempo</td>
-      <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-tempo/1.0.0/index.js">1.0.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/http-instrumentation-tempo/1.0.0/index.js">1.0.0</a>, <a target="_blank" href="https://jslib.k6.io/http-instrumentation-tempo/1.0.1/index.js">1.0.1</a></td>
       <td><a href="https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-tempo/">https://grafana.com/docs/k6/latest/javascript-api/jslib/http-instrumentation-tempo/</a></td>
     </tr>
     </table>
