--- a/lib/index.html
+++ b/lib/index.html
@@ -584,7 +584,7 @@ export default function() {
       <td><a href="https://github.com/grafana/k6-jslib-summary">https://github.com/grafana/k6-jslib-summary</a></td>
     </tr><tr>
       <td>k6-testing</td>
-      <td><a target="_blank" href="https://jslib.k6.io/k6-testing/0.1.0/index.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-testing/0.2.0/index.js">0.2.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-testing/0.3.0/index.js">0.3.0</a></td>
+      <td><a target="_blank" href="https://jslib.k6.io/k6-testing/0.1.0/index.js">0.1.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-testing/0.2.0/index.js">0.2.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-testing/0.3.0/index.js">0.3.0</a>, <a target="_blank" href="https://jslib.k6.io/k6-testing/0.4.0/index.js">0.4.0</a></td>
       <td><a href="https://github.com/grafana/k6-jslib-testing">https://github.com/grafana/k6-jslib-testing</a></td>
     </tr><tr>
       <td>jsonpath</td>
